--- a/shenyun.html
+++ b/shenyun.html
@@ -70,7 +70,21 @@
           </div>
     </section>
     <footer>
-        <p>Redes Sociais</p>
+        <div class="dfoot">
+            <p class="pfoot" style="color:white;">Redes Sociais</p>
+            <span class="material-symbols-outlined ifoot">imagesmode</span>
+            <span class="material-symbols-outlined ifoot">imagesmode</span>
+        </div>
+        <div class="dfoot">
+            <p class="pfoot" style="color:white;">Pague Com</p>
+            <span class="material-symbols-outlined ifoot" style="color: white;">payments</span>
+            <span class="material-symbols-outlined ifoot" style="color: white;">credit_card</span>
+        </div>
     </footer>
+    <div class="footer2">
+        © 2024 - uhuu.com
+        <br>
+        Uhuu.com Tecnologia LTDA | Av. Ipiranga, 6681 - Prédio 95A - Tecnopuc - Porto Alegre/RS - CEP 90619-970 | CNPJ 28.269.175/0001-18
+    </div>
 </body>
 </html>
