--- a/shenyun.html
+++ b/shenyun.html
@@ -43,9 +43,9 @@
         COMPRAR
     </div>
     <section class="sdp">
-        <p>Sobre</p>
-        <p>Descontos</p>
-        <p>Pontos de venda</p>
+        <p id="sobretext">Sobre</p>
+        <p id="descontostext">Descontos</p>
+        <p id="pvendastext">Pontos de venda</p>
     </section>
     <section class="sdptext">
         <div class="tabs-content-item">
@@ -86,5 +86,6 @@
         <br>
         Uhuu.com Tecnologia LTDA | Av. Ipiranga, 6681 - Prédio 95A - Tecnopuc - Porto Alegre/RS - CEP 90619-970 | CNPJ 28.269.175/0001-18
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
